# behelit

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: error.rs  lib.rs  parser.rs  request.rs  responder.rs  response.rs
src/core/: listener.rs  mod.rs  server.rs
tests/: request.rs
